--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rimraf": "3.0.2",
     "rollup": "^2.52.1",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "tsd": "0.24.1",
